--- a/to do/index.html
+++ b/to do/index.html
@@ -35,10 +35,10 @@
                 <div class="col-md-6 align-self-center">
                     <input type="text" class="form-control" id="filter" placeholder="Search Items..." onkeydown="aler(event,this)">
                     <ul id="f-items" class="list-group">
-                        <li class="list-group-item filter-items">Item 1</li>
+                        <!--<li class="list-group-item filter-items">Item 1</li>
                         <li class="list-group-item filter-items">Item 2</li>
                         <li class="list-group-item filter-items">Item 3</li>
-                        <li class="list-group-item filter-items">Item 4</li>
+                        <li class="list-group-item filter-items">Item 4</li>-->
                     </ul>
                 </div>
             </div>
@@ -53,10 +53,10 @@
             </form>
             <h2 class="title">Items</h2>
             <ul id="items" class="list-group">
-                <li class="list-group-item">Item 1 <button class="btn btn-danger btn-sm float-right delete">X</button></li>
+                <!--<li class="list-group-item">Item 1 <button class="btn btn-danger btn-sm float-right delete">X</button></li>
                 <li class="list-group-item">Item 2 <button class="btn btn-danger btn-sm float-right delete">X</button></li>
                 <li class="list-group-item">Item 3 <button class="btn btn-danger btn-sm float-right delete">X</button></li>
-                <li class="list-group-item">Item 4 <button class="btn btn-danger btn-sm float-right delete">X</button></li>
+                <li class="list-group-item">Item 4 <button class="btn btn-danger btn-sm float-right delete">X</button></li>-->
             </ul>
         </div>
     </div>
