--- a/img script/test.html
+++ b/img script/test.html
@@ -6,8 +6,8 @@
     <title>Document</title>
     <style>
         .container{
-            width: 50vw;
-            height: 30vh;
+            width: 700px;
+            height: 40vh;
             overflow: hidden;
         }
         #test{
